docs(guides): fix banner

--- a/packages/tools/docusaurus/docs/guides/create/components.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/components.mdx
@@ -836,7 +836,7 @@ We'll follow one guide for each of those general workflows, resulting in the fou
 
 Feel free to just add the components as shown in the guides for now, every if you'll change those later for real use. You can always adapt them further at a later point! You can also skip the exhaustive component example guides, if you just want to copy &amp; paste along. We'll always include the respective code snapshots to do that!
 
-To learn about finding components to implement, have a look at the [Design System Initiative](../../design-system-initiative.md) guide.
+To learn about finding components to implement, have a look at the [Design System Initiative](../design-system-initiative.md) guide.
 
 ### 1. Adding our own `Button` component
 
@@ -884,7 +884,7 @@ The second way of adding a component involves much of the same steps we've seen 
 
 In addition to that process we customize the component with this one. We add our own property `switchOrder` to switch the order of headline and subheadline. Not a feature of the **kickstartDS** base `Headline` normally. This results in us having to change the **React** template, which makes this [customizing](../components/customize.mdx), compared to example to [extension](../components/extend.mdx). We also add RTE-like rendering capabilities to the content fields.
 
-We have a [dedicated guide for customization](../components/custommize.mdx), too, explaining the concepts a bit more in-depth.
+We have a [dedicated guide for customization](../components/customize.mdx), too, explaining the concepts a bit more in-depth.
 
 The result will look like this:
 
