docs(layout): fix typo

--- a/packages/tools/docusaurus/docs/foundations/layout/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/index.mdx
@@ -36,7 +36,7 @@ The Layout helps you to generate flexible methods to present and structure your 
           icon: 'chevron-right',
         },
       }}
-      text="A collection of utility components that are designed to be used as building blocks for your web application's layout."
+      text="A collection of utility components that are designed to be used as building blocks for your web applications layout."
       topic="Bedrock"
     />
   </Columns>
