docs(starter): add starter to docs, also plug smaller holes

--- a/packages/tools/docusaurus/docs/guides/components/extend.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/extend.mdx
@@ -1359,7 +1359,7 @@ You're immune to underlying changes to:
 - the components template (both **React**, and the resulting **HTML**)
 - the design and layout (changes to **CSS**, **SCSS** and **Design &amp; Component Token**)
 
-In the case of a changed [component API](../../foundations/components/component-api.md), you should have a look at the corresponding `CHANGELOG.md` and potential notes in our matching [migration guide](../migrations/index.md). You'll probably just need to add a newly added field to your **React** template, and potentially your own [component API](../../foundations/components/component-api.md) if you want to use it. If a field was changed, that might also necessitate some adaption of your own version. Finally a removed field you're actually using would mean adding additional customization to regain that functionality. Have a look at our [`Headline` example guide](../examples/components/headline.mdx) to see how you'd add your own, new property!
+In the case of a changed [component API](../../foundations/components/component-api.md), you should have a look at the corresponding `CHANGELOG.md` and potential notes in our matching [migration guide](../migrations/index.mdx). You'll probably just need to add a newly added field to your **React** template, and potentially your own [component API](../../foundations/components/component-api.md) if you want to use it. If a field was changed, that might also necessitate some adaption of your own version. Finally a removed field you're actually using would mean adding additional customization to regain that functionality. Have a look at our [`Headline` example guide](../examples/components/headline.mdx) to see how you'd add your own, new property!
 
 Learn more about what we mean by technical debt here on the overview page of this section.
 
