--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -733,7 +733,7 @@ yarn add kickstartds
 
 </CH.Code>
 
-Read more [about our CLI here](../../intro/cli.md)
+Read more [about our CLI here](../../intro/cli.mdx)
 
 Then add the following two additional lines to your `package.json` scripts block:
 
