--- a/packages/tools/docusaurus/docs/guides/create/storybook.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/storybook.mdx
@@ -8,7 +8,7 @@ import Admonition from 'react-admonitions';
 
 ## Overview
 
-We use **Storybook** for a lot of different useful features it offers. For an overview, have a look at our [integrations overview for **Storybook**](../../integration/storybook/index.md).
+We use **Storybook** for a lot of different useful features it offers. For an overview, have a look at our [integrations overview for **Storybook**](../../integration/storybook/index.mdx).
 
 ## Install **Storybook**
 
