--- a/packages/tools/docusaurus/docs/integration/index.mdx
+++ b/packages/tools/docusaurus/docs/integration/index.mdx
@@ -12,7 +12,7 @@ import { Button } from '@kickstartds/base/lib/button';
 
 <div ks-theme="docs">
 
-Integration well with **Storybook** means giving all the users of your Design System the best experience possible. It should be the perfect workbench, welcoming every type of stakeholder!
+Integrating well with **Storybook** means giving all the users of your Design System the best experience possible. It should be the perfect workbench, welcoming every type of stakeholder!
 
 <Button
   size="small"
@@ -104,7 +104,7 @@ Integration well with **Storybook** means giving all the users of your Design Sy
 
 <div ks-theme="docs">
 
-**React** as our templating language of choice offers great integration capabilities, and we've build some on top of those... to help you even more when creating your own components.
+**React** as our templating language of choice offers great integration capabilities, and we've built some on top of those... to help you even more when creating your own components.
 
 <Button
   size="small"
@@ -136,7 +136,7 @@ Integration well with **Storybook** means giving all the users of your Design Sy
       topic="Rich Text Rendering"
       text="How to replace rendered text with a custom RTE implementation, e.g. **Sanity**s `PortableText`"
       link={{
-        href: './storybook/rich-text-rendering',
+        href: './react/rich-text-rendering',
         label: 'Rich Text',
         variant: 'clear',
         size: 'small',
