--- a/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
@@ -1508,6 +1508,28 @@ export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
 
 </CH.Scrollycoding>
 
+To complete the template we add the `HeadlineProvider` to our `src/components/Providers.jsx`:
+
+<CH.Code>
+```jsx src/components/Providers.jsx focus=4,8,12
+import { ButtonProvider } from "./button/ButtonComponent";
+import { SectionProvider } from "./section/SectionComponent";
+import { TeaserBoxProvider } from "./teaser-card/TeaserCardComponent";
+import { HeadlineProvider } from "./headline/HeadlineComponent";
+
+export default (props) => (
+  <ButtonProvider>
+    <HeadlineProvider>
+      <SectionProvider>
+        <TeaserBoxProvider {...props} />
+      </SectionProvider>
+    </HeadlineProvider>
+  </ButtonProvider>
+);
+
+````
+</CH.Code>
+
 This concludes the creation of our new `Headline` component. It's now ready to be used inside your Design System, and available to your down stream consumers... hopefully efficiently closing a gap for them!
 
 ## Use of **Storybook**
@@ -1520,4 +1542,181 @@ If you're using **Storybook**, you can follow this part of the example to get al
   configuration to your use accordingly, when following this part!
 </Admonition>
 
-This part of the guide will follow soon! Please come back soon, or hit us up for an update!
+Add the following file to your `src/components/headline` folder:
+
+<CH.Spotlight>
+<CH.Code>
+```jsx src/components/headline/Headline.stories.jsx
+import { Headline } from "./HeadlineComponent";
+import { pack, getArgsShared } from "@kickstartds/core/lib/storybook/helpers";
+import HeadlineStories from "@kickstartds/base/lib/headline/headline.stories";
+import schema from "./headline.schema.dereffed.json";
+
+const { args, argTypes } = getArgsShared(schema);
+
+const Template = (args) => <Headline {...args} />;
+
+export default {
+  ...HeadlineStories,
+  title: "Components/Headline",
+  args,
+  argTypes,
+  parameters: {
+    jsonschema: schema,
+  },
+};
+
+export const H1 = Template.bind({});
+H1.args = pack({
+  level: "h1",
+  style: "h1",
+  text: "Headline level h1",
+});
+
+export const H2 = Template.bind({});
+H2.args = pack({
+  level: "h2",
+  style: "h2",
+  text: "Headline level h2",
+});
+
+export const H3 = Template.bind({});
+H3.args = pack({
+  level: "h3",
+  style: "h3",
+  text: "Headline level h3",
+});
+
+export const H4 = Template.bind({});
+H4.args = pack({
+  level: "h4",
+  style: "h4",
+  text: "Headline level h4",
+});
+
+export const Subheadline = Template.bind({});
+Subheadline.args = pack({
+  text: "With a subheadline",
+  sub: "This is a subheadline, displayed below the headline",
+});
+
+export const SubheadlineOrderSwapped = Template.bind({});
+SubheadlineOrderSwapped.args = pack({
+  text: "With a swapped subheadline",
+  sub: "This is a subheadline, displayed above the headline",
+  switchOrder: true,
+});
+
+export const Markdown = Template.bind({});
+Markdown.args = pack({
+  text: "With *Markdown* use",
+  sub: "This is a subheadline, displayed **below the headline**",
+});
+````
+
+</CH.Code>
+
+---
+
+### Import `Headline` component
+
+Import `Headline` component and add it to the `Template` that we'll bind **Stories** to.
+
+<CH.Code>
+```jsx src/components/headline/Headline.stories.jsx focus=1,8
+
+````
+</CH.Code>
+
+---
+
+### Import **Storybook Controls** helpers
+
+Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema#storybook-json-schema-addon).
+
+<CH.Code>
+```jsx src/components/headline/Headline.stories.jsx focus=2,4,6,15:17
+
+````
+
+</CH.Code>
+
+---
+
+### Import re-usable `Headline` **Stories**...
+
+We import the existing `Headline` **Story** part of `@kickstartDS/base`, to re-use all the default settings.
+
+<CH.Code>
+```jsx src/components/headline/Headline.stories.jsx focus=3,11
+
+````
+
+</CH.Code>
+
+---
+
+### ... and overwrite values where needed
+
+We set all the **Story** defaults specific to our component.
+
+<CH.Code>
+```jsx src/components/headline/Headline.stories.jsx focus=10,12:18
+
+````
+
+</CH.Code>
+
+---
+
+### Converting args to flat keys
+
+We use `pack` to convert all deep **JSON** args to flat (`.` delimited) keys and values. This is the format your **Storybook Controls** get generated off.
+
+<CH.Code>
+```jsx src/components/headline/Headline.stories.jsx focus=2,21:25
+
+````
+
+</CH.Code>
+
+---
+
+### Create `Headline` variants
+
+We do this by binding to our `Template`, and use `pack` to convert all deep **JSON** args to flat (`.` delimited) keys and values. This is the format your **Storybook Controls** get generated off.
+
+<CH.Code>
+```jsx src/components/headline/Headline.stories.jsx focus=8,20
+
+````
+
+</CH.Code>
+
+</CH.Spotlight>
+
+If you reopen your **Storybook** now, or if you kept it running while following along, you should now see your new `Headline` in all its glory!
+
+## Finished **Code Sandbox**
+
+You can also have a look at the completed component in the following **Code Sandbox**:
+
+<iframe
+  src="https://codesandbox.io/embed/github/kickstartDS/ds-guide/tree/step%2F4/?fontsize=14&hidenavigation=1&module=%2Fsrc%2Fcomponents%2Fheadline%2FHeadlineComponent.tsx&theme=dark&view=editor"
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="ds-guide"
+  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
+Toggle the file browser with the hamburger icon at the top left, [or open it directly in your browser](https://codesandbox.io/s/github/kickstartDS/ds-guide/tree/step/4?file=/src/components/headline/HeadlineComponent.tsx).
+
+```
+
+```
