--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -1085,19 +1085,7 @@ export const Interstitial: FunctionComponent<
 
 This concludes the creation of our new `Interstitial` component. It's now ready to be used inside your Design System, and available to your down stream consumers... hopefully efficiently closing a gap for them!
 
-## Use of **Storybook**
-
-If you're using **Storybook**, you can follow this part of the example to get all the integration goodness possible with **kickstartDS**!
-
-<Admonition type="tip" title="Storybook setup">
-  This guide assumes you're using a set up like described in our [Create your
-  Design System](../../create/index.mdx) guide! Be sure to adapt commands and
-  configuration to your use accordingly, when following this part!
-</Admonition>
-
-This part of the guide will follow soon! Please come back soon, or hit us up for an update!
-
-## Completed component
+## Finished **Code Sandbox**
 
 Play around with your new component directly in a `Code Sandbox` below:<br/>
 
