--- a/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
@@ -2501,6 +2501,28 @@ export const SectionProvider: FC<PropsWithChildren<any>> = (props) => (
 </CH.Code>
 </CH.Scrollycoding>
 
+To complete the template we add the `SectionProvider` to our `src/components/Providers.jsx`:
+
+<CH.Code>
+```jsx src/components/Providers.jsx focus=2,9,11
+import { ButtonProvider } from "./button/ButtonComponent";
+import { SectionProvider } from "./section/SectionComponent";
+import { TeaserBoxProvider } from "./teaser-card/TeaserCardComponent";
+import { HeadlineProvider } from "./headline/HeadlineComponent";
+
+export default (props) => (
+  <ButtonProvider>
+    <HeadlineProvider>
+      <SectionProvider>
+        <TeaserBoxProvider {...props} />
+      </SectionProvider>
+    </HeadlineProvider>
+  </ButtonProvider>
+);
+
+````
+</CH.Code>
+
 This concludes the creation of our new `Section` component. It's now ready to be used inside your Design System, and available to your down stream consumers... hopefully efficiently closing a gap for them!
 
 ## Use of **Storybook**
@@ -2513,4 +2535,187 @@ If you're using **Storybook**, you can follow this part of the example to get al
   configuration to your use accordingly, when following this part!
 </Admonition>
 
-This part of the guide will follow soon! Please come back soon, or hit us up for an update!
+Add the following file to your `src/components/section` folder:
+
+<CH.Spotlight>
+<CH.Code>
+```jsx src/components/section/Section.stories.jsx
+import merge from "deepmerge";
+import {
+  pack,
+  unpack,
+  getArgsShared,
+} from "@kickstartds/core/lib/storybook/helpers";
+import sectionStories from "@kickstartds/base/lib/section/section.stories";
+import TeaserCardStory, {
+  CardWithImage,
+} from "../teaser-card/TeaserCard.stories";
+import schema from "./section.schema.dereffed.json";
+
+const Section = sectionStories.component;
+CardWithImage.displayName = "Teaser Card";
+const Template = (args) => {
+  return (
+    <Section {...args}>
+      <CardWithImage
+        {...merge(TeaserCardStory.args, unpack(CardWithImage.args))}
+      />
+      <CardWithImage
+        {...merge(TeaserCardStory.args, unpack(CardWithImage.args))}
+      />
+      <CardWithImage
+        {...merge(TeaserCardStory.args, unpack(CardWithImage.args))}
+      />
+    </Section>
+  )
+};
+
+const { args, argTypes } = getArgsShared(schema);
+
+export default {
+  ...sectionStories,
+  title: "Layout/Section",
+  args,
+  argTypes,
+  parameters: {
+    jsonschema: schema,
+  },
+};
+
+export const TeaserCards = Template.bind({});
+TeaserCards.args = pack({
+  headline: 'Section headline',
+  mode: "tile",
+  ctas: [],
+});
+
+export const WithCtas = Template.bind({});
+WithCtas.args = pack({
+  headline: 'Section headline',
+  mode: "tile",
+  ctas: [{
+      label: 'Section CTA 1',
+      target: '#',
+    }, {
+      label: 'Section CTA 2',
+      target: '#',
+    }, {
+      label: 'Section CTA 3',
+      target: '#',
+    }
+  ]
+});
+
+
+````
+
+</CH.Code>
+
+---
+
+### Import re-usable `Section` **Stories**
+
+Import `Section` component and add it to the `Template` that we'll bind **Stories** to.
+
+<CH.Code>
+```jsx src/components/section/Section.stories.jsx focus=7,15:17,27:29
+
+````
+</CH.Code>
+
+---
+
+### Import re-usable `TeaserCard` **Stories**
+
+Import `TeaserCard` **Stories** as demo content for our `Section` **Story**. Add them to the `Template`, too.
+
+<CH.Code>
+```jsx src/components/section/Section.stories.jsx focus=8:10,18:26
+
+````
+
+</CH.Code>
+
+---
+
+### Import **Storybook Controls** helpers
+
+Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema#storybook-json-schema-addon).
+
+<CH.Code>
+```jsx src/components/section/Section.stories.jsx focus=2:3,5:6,11,31
+
+````
+
+</CH.Code>
+
+---
+
+### ... and overwrite values where needed
+
+We set all the **Story** defaults specific to our component.
+
+<CH.Code>
+```jsx src/components/section/Section.stories.jsx focus=33,35:41
+
+````
+
+</CH.Code>
+
+---
+
+### Converting args to flat keys
+
+We use `pack` to convert all deep **JSON** args to flat (`.` delimited) keys and values. This is the format your **Storybook Controls** get generated off.
+
+<CH.Code>
+```jsx src/components/section/Section.stories.jsx focus=44:48
+
+````
+
+</CH.Code>
+
+---
+
+### Create `Section` variants
+
+We do this by binding to our `Template`, and use `pack` to convert all deep **JSON** args to flat (`.` delimited) keys and values. This is the format your **Storybook Controls** get generated off.
+
+<CH.Code>
+```jsx src/components/section/Section.stories.jsx focus=15,43
+
+````
+
+</CH.Code>
+
+</CH.Spotlight>
+
+If you reopen your **Storybook** now, or if you kept it running while following along, you should now see your new `Section` in all its glory!
+
+## Finished **Code Sandbox**
+
+You can also have a look at the completed component in the following **Code Sandbox**:
+
+<iframe
+  src="https://codesandbox.io/embed/github/kickstartDS/ds-guide/tree/step%2F4/?fontsize=14&hidenavigation=1&module=%2Fsrc%2Fcomponents%2Fsection%2FSectionComponent.tsx&theme=dark&view=editor"
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="ds-guide"
+  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
+Toggle the file browser with the hamburger icon at the top left, [or open it directly in your browser](https://codesandbox.io/s/github/kickstartDS/ds-guide/tree/step/4?file=/src/components/section/SectionComponent.tsx).
+
+```
+
+```
+
+```
+
+```
