--- a/packages/tools/docusaurus/docs/foundations/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/index.mdx
@@ -10,7 +10,7 @@ import myImageUrl from '../../static/img/content-module.png';
 
 # Foundations
 
-Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your specifics based on all the best practice defaults given by kickstartDS on token, like color, typography, but also components and layout.
+Foundations are the visual elements needed to create your **Design System** and its engaging user experiences. You can build up your specifics based on all the best practice defaults given by **kickstartDS** on token, like color, typography, but also components and layout.
 
 <Section ks-theme="docs" spaceBefore="none" width="full">
   <Columns columns={2} gutter="md" switchAt={480}>
@@ -111,5 +111,3 @@ Foundations are the visual elements needed to create your Design System and its 
     }}
   />
 </Section>
-
-TODO: add Zendesk to Button
