--- a/packages/tools/docusaurus/docs/guides/create/components.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/components.mdx
@@ -1002,7 +1002,7 @@ Toggle the file browser with the hamburger icon at the top left, [or open it dir
 
 ## Adding an article teaser recipe
 
-We're currently still working on this guide, it will follow soon! We will combine all of the added components into a recipe here. A recipe is not quite a component (it doesn't have its own [component API](../../foundations/components/component-api.md) for example), but more of inspiration to your Design Systems users. They show how more complex, but slightly one-off, components can be built by just combining existing stuff in smart ways!
+We're currently still working on this guide, it will follow soon! We will combine all of the added components into a recipe here. A recipe is not quite a component (it doesn't have its own [component API](../../foundations/components/component-api.md) for example), but more of an inspiration to your Design Systems users. They show how more complex, but slightly one-off, components can be built by just combining existing stuff in smart ways!
 
 ## Result
 
