--- a/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
@@ -1208,7 +1208,7 @@ We set all the **Story** defaults specific to our component.
 
 ---
 
-### Converting args to flat keys
+### Convert args to flat keys
 
 We use `pack` to convert all deep **JSON** args to flat (`.` delimited) keys and values. This is the format your **Storybook Controls** get generated off.
 
