--- a/packages/tools/docusaurus/docs/guides/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/index.mdx
@@ -68,11 +68,11 @@ Guides provide instructions on how to get the most out of kickstartDS to create 
       }}
     />
     <TeaserBox
-      topic="Using our starter"
-      text="Our starter helps create your Design System in just minutes!"
+      topic="Using our Starter"
+      text="Our starter helps create your Design System in just 5 minutes!"
       link={{
         href: './use-our-starter/',
-        label: 'See starters',
+        label: 'See Starter',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
