--- a/packages/tools/docusaurus/docs/guides/use-our-starter.mdx
+++ b/packages/tools/docusaurus/docs/guides/use-our-starter.mdx
@@ -8,7 +8,7 @@ import { TextMedia } from '@kickstartds/base/lib/text-media';
 import { Section } from '@kickstartds/base/lib/section';
 import { TeaserBox } from '@kickstartds/base/lib/teaser-box';
 
-# kickstartDS Starter
+# kickstartDS Design System Starter
 
 <Section
   width="default"
@@ -51,7 +51,7 @@ link={{
 
 ## About
 
-The **kickstartDS Starter** is your most efficient way of kickstarting a **Design System**. It creates a ready-to-use **Design System**, only waiting for you to put your stamp on it! Next to some additional features and configuration, the content of this **Starter** is strongly aligned with our main guide ["Create your **Design System**"](./create/index.mdx). This means you can use that guide as a detailed reference for the way stuff works, and learn about the reasoning behind those decisions.
+The **kickstartDS Design System Starter** is your most efficient way of kickstarting a **Design System**. It creates a ready-to-use **Design System**, only waiting for you to put your stamp on it! Next to some additional features and configuration, the content of this starter is strongly aligned with our main guide ["Create your **Design System**"](./create/index.mdx). This means you can use that guide as a detailed reference for the way stuff works, and learn about the reasoning behind those decisions.
 
 ## Overview
 
